--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "RunManager",
-    "version" : "0.0.3",
+    "version" : "0.0.4",
     "description" : "Simulation run manager for S.Takami",
     "icon" : "fa-bar-chart",
     "main_controller" : "rrsoacis\\apps\\tkmnet\\run_manager\\MainPage",
@@ -8,6 +8,7 @@
 			["add_base","rrsoacis\\apps\\tkmnet\\run_manager\\AddBasePage"],
 			["add_reps","rrsoacis\\apps\\tkmnet\\run_manager\\AddReplaceSetsPage"],
 			["add_rep","rrsoacis\\apps\\tkmnet\\run_manager\\AddReplaceSetPage"],
+			["add_dict","rrsoacis\\apps\\tkmnet\\run_manager\\AddDictPage"],
 			["control","rrsoacis\\apps\\tkmnet\\run_manager\\ControlPage"]
 		],
     "dependencies" : [ ]
